# libsookee

./: Makefile.am  Tupfile  configure-debug.conf.example  configure-debug.sh  configure-release.conf.example  configure-release.sh  configure.ac
docs/: todo.text
m4/: ax_cxx_compile_stdcxx_11.m4  ax_cxx_compile_stdcxx_14.m4
pkg-config/: libsookee-db.pc.in  libsookee-i18n.pc.in  libsookee-speller.pc.in  libsookee.pc.in
src/: Makefile  Makefile.am  Makefile.local.example  bug.cpp  cal.cpp  cfg.cpp  config.cpp  i18n.cpp  ios.cpp  log.cpp  mysql.cpp  network.cpp  radp.cpp  reg.cpp  speller.cpp  str.cpp  sub.cpp  test-cal.cpp  test-ios.cpp  test-radp.cpp  test-socketstream.cpp  test-stencil.cpp  test-stl.cpp  test-sub.cpp  test-trim.cpp  test.cpp  time-radp.cpp  types.cpp
src/include/sookee/: ansi.h  args.h  bug.h  cal.h  cfg.h  config.h  factory.h  fdstream.h  filedb.h  i18n.h  ios.h  linux.h  log.h  macros.h  mail.h  math.h  mem.h  mysql.h  network.h  radp.h  reg.h  require-c++11.h  rnd.h  scoper.h  socketstream.h  speller.h  ssl_socketstream.h  stencil.h  stl.h  str.h  sub.h  test.h  types.h  utils.h  xio.h
src/include/sookee/types/: basic.h  dbl_deq.h  dbl_lst.h  dbl_map.h  dbl_set.h  dbl_vec.h  deq.h  flt_deq.h  flt_lst.h  flt_map.h  flt_set.h  flt_vec.h  int_deq.h  int_lst.h  int_map.h  int_set.h  int_vec.h  lst.h  map.h  pair.h  regex.h  set.h  siz_deq.h  siz_lst.h  siz_map.h  siz_set.h  siz_vec.h  str_deq.h  str_lst.h  str_map.h  str_set.h  str_vec.h  stream.h  typed_integral.h  typedefs.h  typedefs_cnt.h  typedefs_deq.h  typedefs_lst.h  typedefs_map.h  typedefs_pair.h  (+3 more)
src/test/: Makefile.am  test-cal.cpp  test-radp.cpp  test-socketstream.cpp  test-stencil.cpp  test-sub.cpp  test-trim.cpp  test.cpp
